Fix bug and simplify implementation by disabling collapse animation
Other apps (Confluence, Gitlab, Google Sites) don't seem to bother animating the collapse either. Confluence went so far as to remove it between 5.x and 6.x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,16 +63,6 @@ pre {
     list-style: none;
 }
 
-#subpage-listing ul .collapsed {
-    overflow: hidden;
-    transition: height 0.15s ease-out;
-}
-
-#subpage-listing ul .expanded {
-    overflow: hidden;
-    transition: height 0.25s ease-in;
-}
-
 #subpage-listing .list-collapser {
     cursor: pointer;
     /* Force even empty elements to take up space */
